--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=aaf97c4694244df24498",
+    "/css/app.css": "/css/app.css?id=029c35f4d751d5472c18"
 }
