--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,11 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
+# yandex cloud object storage
+YC_ACCESS_KEY_ID=
+YC_SECRET_ACCESS_KEY=
+YC_BUCKET=
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
