--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "bootstrap-vue": "^2.18.1"
+        "bootstrap-vue": "^2.18.1",
+        "vue-the-mask": "^0.11.1"
     }
 }
