--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.18.1",
+        "vue-tel-input": "^4.4.2",
         "vue-the-mask": "^0.11.1"
     }
 }
